--- a/assets/sass/components/_typography.scss
+++ b/assets/sass/components/_typography.scss
@@ -21,22 +21,18 @@ h3 {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: calc(var(--h1-font-size) * 0.8);
 
   @include if_screen(">two-columns") {
-    font-size: 2.4rem;
+    font-size: var(--h1-font-size);
   }
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: var(--h2-font-size);
 }
 
-h3 {
-  font-size: 1.17rem;
-}
-
-h2, h3, h4, h5, h6{
+h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
